# palletizing_amr

./: frames_2026-07-10_02.19.33.gv
src/palletizing_amr/: .gitignore  CMakeLists.txt  package.xml
src/palletizing_amr/config/: controller.yaml
src/palletizing_amr/launch/: amr_gazebo.launch.py
src/palletizing_amr/meshes/: base_link.stl  forklift.stl  wheel_FLI.stl  wheel_FLO.stl  wheel_FRI.stl  wheel_FRO.stl  wheel_ML1.stl  wheel_ML2.stl  wheel_MR1.stl  wheel_MR2.stl
src/palletizing_amr/models/pallet_box_mobile/: model.sdf
src/palletizing_amr/rviz/: amr.rviz
src/palletizing_amr/scripts/: cmd_vel_relay.py  generate_world.py  line_detector.py  mission_helper.py
src/palletizing_amr/src/: forklift_position_pid.cpp
src/palletizing_amr/urdf/: palletizing_amr.urdf
src/palletizing_amr/worlds/: warehouse.sdf
src/palletizing_amr/worlds/small_warehouse/: small_warehouse.world
